--- a/src/component/Body/Body.css
+++ b/src/component/Body/Body.css
@@ -3,17 +3,19 @@
     justify-content: center;
     width: 100%;
     height: calc(100vh-100px);
-    
+
 }
 
 .images-container{
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
-    gap: 20px;
-    width: 90% ;
+    gap: 40px;
+    width: 80% ;
     height: calc(100%-20px);
-    padding: 10px;
-    overflow-y: scroll;
+    padding: 5px;
+    /* overflow-y: scroll; */
     list-style: none;
+    
+    
 } 
