--- a/src/component/Cards/Cards.css
+++ b/src/component/Cards/Cards.css
@@ -1,12 +1,11 @@
 .cards{
-width: 350px;
-height: 400px;
+width: 300px;
+height: 350px;
 position: relative;
-overflow: hidden;
 border-radius: 10px;
 cursor: pointer;
-
 }
+
 cards:hover{
     transform: scale(1.02);
 }
@@ -15,28 +14,53 @@ cards:hover{
 width: 100%;
 height:100% ;
 object-fit: cover;
-
+border-radius: 12px;
 
 }
+
 .info-image{
     position: absolute;
-    bottom: 10px;
+    bottom: 5px;
     text-align: center;
     padding: 5px;
-
+    font-weight: bold;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: whitesmoke;
+    font-size: 12px;
 
 }
+
 .cards-likes{
     position: absolute;
-    top: 20px;
-    right: 20px;
+    top: 10px;
+    right: 15px;
     padding: 5px;
+    color: slategray;
+    background-color: var(--color-secundario);
+    border-radius: 15px;
+    font-size: 10px;
 
 } 
  .photo{
     position: absolute;
-    width: 95px;
-    height: 95px;
-    border-radius: 8px;
-    border: 8px ,solid , rgb(249, 177, 68);
+    width: 60px;
+    height: 65px;
+    border-radius: 30px;
+    border: 2px ,solid, var(--color-secundario);
+    bottom: -30px;
+    left: 110px;
+ }
+ .photo:hover{
+    scale: 1.5;
+ }
+ .date{
+    position: absolute;
+    bottom: 5px;
+    color:var(--color-secundario);
+    font-size: 9px;
+    right: 15px;
+    
+    
+    
+   
  }
