--- a/src/component/Header/Header.css
+++ b/src/component/Header/Header.css
@@ -2,8 +2,7 @@ header {
 display: flex;
 justify-content: space-around;
 align-items: center;
-width: 100%;
-height: 5svh;
+height: 50px;
 padding: 15px;
 gap: 8px;
 background-color: rgb(250, 250, 249);
